--- a/.gitignore
+++ b/.gitignore
@@ -12,4 +12,5 @@ curricular
 !**/modulo-1/tareas/solucion/
 !**/modulo-2/tareas/solucion/
 !**/modulo-3/tareas/solucion/
+!**/modulo-4/tareas/solucion/
 
